example with more stuff

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -2,7 +2,6 @@ framework:
     messenger:
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
         # failure_transport: failed
-
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             async: '%env(MESSENGER_TRANSPORT_DSN)%'
@@ -11,7 +10,8 @@ framework:
 
         routing:
             # Route your messages to the transports
-            # 'App\Message\YourMessage': async
+            'App\Message\CreateOrUpdateProductMessage': async
+            'App\Message\CreateProductMessage': sync
 
 # when@test:
 #    framework:
